--- a/Cargo.toml
+++ b/Cargo.toml
@@ -11,7 +11,6 @@ multiset = "0.0.5"
 regex = "1.4.2"
 itertools = "0.9.0"
 text_io = "0.1.9"
-factor = "0.4.0"
 
 [[bin]]
 name = "01a_sonar_sweep"
@@ -36,3 +35,11 @@ path = "src/17a_trick_shot.rs"
 [[bin]]
 name = "17b_trick_shot"
 path = "src/17b_trick_shot.rs"
+
+[[bin]]
+name = "20a_trench_map"
+path = "src/20a_trench_map.rs"
+
+[[bin]]
+name = "20b_trench_map"
+path = "src/20b_trench_map.rs"
